sandbox/output
StringCalculator.java:10: error: incompatible types: String cannot be converted to int
           return splittedInput[0];
                               ^
StringCalculator.java:12: error: incompatible types: String cannot be converted to int
           return  splittedInput[0] + splittedInput[1];
                                    ^
2 errors
